JavaFX1 - Create ViewController, Alerts